# autkrs

./: .gitignore  README.md
autk/: Cargo.toml  README.md
autk/src/: funcs.rs  lib.rs  main.rs  utils.rs
autk/src/brother/: mod.rs  xlcmp.rs  xlmatch.rs  xlsch.rs  xlshow.rs
autk/src/calculation/: acct.rs  chart.rs  mod.rs  table.rs  xlsht.rs
autk/src/cli/: cmd.rs  evince.rs  mod.rs  psargs.rs  xlsch.rs
autk/src/mapper/: mod.rs
autk/src/meta/: mod.rs
autk/src/reader/: acct.rs  chart.rs  mod.rs  table.rs
autk/tests/: common.rs  filter.rs  lease.rs  loadtable.rs  tbtest.rs
heavy_version_archived/src/brother/: bk.rs  xlshow.rs
heavy_version_archived/src/calculation/: mod.rs  xlsht.rs
heavy_version_archived/src/cli/: cmd.rs  evince.rs  mod.rs  psarg.rs
heavy_version_archived/tests/: loadtable.rs  tbtest.rs  yl_rm_2021.xlsx
lwtk/: Cargo.toml
lwtk/src/: lib.rs  main.rs  utils.rs
lwtk/src/brother/: mod.rs  xlcmp.rs  xlmatch.rs  xlshow.rs  xlwt.rs
lwtk/src/cli/: cmd.rs  evince.rs  mod.rs  psargs.rs
