[package]
name = "autk"
author="sk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
clap = { version = "4.5.36", features = ["derive"] }
comfy-table = "7.1.4"
# ndarray = "0.15.6"
# phf = { version = "0.11.3", features = ["macros"] }
# polars = "0.26.0"
rayon = "1.10.0"
regex = "1.8.4"
