[package]
name = "autk"
author="sk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
clap = { version = "4.5.36", features = ["derive"] }
comfy-table = "7.1.4"
polars = { version = "0.49.1", features = ["full", "lazy", "sql", "ndarray", "dtype-decimal"] }
rayon = "1.10.0"
regex = "1.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["default"] }
