[package]
name = "autk"
version = "0.4.0"
authors =["Skandha <skandhask@qq.com>"]
edition = "2024"
description="Auditors' Toolkit."
readme = "README.md"
homepage="https://github.com/zefuirusu/autkrs"
license="GPL-3.0"
license-file="LICENSE"
keywords=["cli","audit","tool","excel"]
categories=["command-line-utilities"]
publish=false

[[bin]]
name="autk"
path="src/main.rs"
test=false

[dependencies]
calamine = "0.28.0"
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.1.4"
rayon = "1.10.0"
regex = "1.11.1"
rust_xlsxwriter = { version = "0.89.1", features = ["constant_memory"] }
